--- a/Index.html
+++ b/Index.html
@@ -24,6 +24,7 @@
         background-color: rgb(152, 228, 165);
         text-align: center;
         padding-top: 12px;
+        padding-bottom: 12px;
         border-radius: 16px;
         border: 2px solid rgb(14, 43, 1);
       }
